# tv-contrl

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
plan/: tv-remote-mac.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  lib.rs  main.rs
src/components/device/: DeviceSelector.vue  WifiConnectModal.vue
src/components/keyboard/: KeyboardModal.vue
src/components/remote/: ControlButton.vue  DirectionPad.vue  RemoteControl.vue  VolumeControl.vue
src/components/ui/: NeuButton.vue
src/composables/: useAdb.ts
src/constants/: keycodes.ts
src/types/: index.ts
