[package]
name = "tv-remote"
version = "1.0.0"
description = "TV Remote - ADB Controller"
authors = ["you"]
edition = "2021"

[lib]
name = "tv_remote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

